:feature: Layout page links

--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/icones/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="60x60" href="/icones/apple-icon-60x60.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="/icones/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="/icones/apple-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="/icones/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="/icones/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="/icones/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/icones/apple-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/icones/apple-icon-180x180.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/icones/android-icon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/icones/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="/icones/favicon-96x96.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/icones/favicon-16x16.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="msapplication-TileImage" content="/icones/ms-icon-144x144.png" />
+  <meta name="msapplication-TileColor" content="#F7F0F2" />
+  <meta name="theme-color" content="#F7F0F2" />
+  <link rel="manifest" href="/icones/manifest.json" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;700&display=swap" rel="stylesheet" />
   <title>Thais Reis Nails</title>
 </head>
 
