:feature: New layout equipe

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="theme-color" content="#F7F0F2" />
   <link rel="manifest" href="/icones/manifest.json" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&Nunito:wght@200;300;400;700&display=swap" rel="stylesheet" />
 
   <title>Thais Reis Nails</title>
 </head>
